correct title spacing for desktop

--- a/first-edition/atoms/default/client/css/_content-section.scss
+++ b/first-edition/atoms/default/client/css/_content-section.scss
@@ -16,6 +16,7 @@
 
       @include mq(tablet) {
         font-size: 42px;
+        margin-bottom: 23px;
       }
     }
     
